--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI=mongodb+srv://<you>:<yourPassword>@cluster0.z2fyj.mongodb.net/temples
+## MONGODB_URI=mongodb+srv://<you>:<yourPassword>@cluster0.z2fyj.mongodb.net/temples
+MONGODB_URI=mongodb+srv://dbuser:f419dxSujSMJU6qh@cluster0.x14t50m.mongodb.net/temples
