--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^16.0.0",
     "express": "^4.16.3",
+    "express-validator": "^7.0.1",
     "joi": "^17.6.0",
     "joi-password-complexity": "^5.1.0",
     "mongodb": "^4.4.0",
@@ -26,7 +27,7 @@
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "nodemon": "^1.18.4",
+    "nodemon": "^2.0.22",
     "prettier": "^2.5.1"
   }
 }
